# rundeck-mcp-server-experimental

./: .gitignore  INSTALL.md  MANIFEST.in  Makefile  README.md  claude_desktop_config.example.json  claude_desktop_multi_server_example.json  config.env.example  multi-server-example.env  pyproject.toml  requirements.txt  rundeck_mcp_server.py  setup.py  tool_prompts.json
docs/: CLAUDE_MULTIPLE_SERVERS_GUIDE.md  PROJECT_STRUCTURE.md  SERVER_PARAMETER_FIX.md  TROUBLESHOOTING.md
tests/: __init__.py  debug_jobs.py  fix_claude_config.py  get_claude_config.py  test_multi_server.py  test_server.py
