[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rundeck-mcp-server"
version = "1.0.0"
description = "Model Context Protocol (MCP) server for Rundeck automation platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Rundeck MCP Server Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.9.0",
    "requests>=2.32.0",
    "python-dateutil>=2.8.0",
]
keywords = ["rundeck", "mcp", "server", "automation", "devops"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
rundeck-mcp-server = "rundeck_mcp_server:main"

[project.urls]
Homepage = "https://github.com/your-username/rundeck-mcp-server"
Repository = "https://github.com/your-username/rundeck-mcp-server"
Issues = "https://github.com/your-username/rundeck-mcp-server/issues"
Documentation = "https://github.com/your-username/rundeck-mcp-server/blob/main/README.md"

[tool.setuptools]
packages = ["rundeck_mcp_server"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"